[gd_scene load_steps=41 format=3 uid="uid://bdnyuxucvxkjv"]

[ext_resource type="Script" uid="uid://csui6goekepyu" path="res://Scripts/boss2.gd" id="1_tvscf"]
[ext_resource type="PackedScene" uid="uid://cnibsmhu38adm" path="res://Scenes/boss1_bullet.tscn" id="2_pjcoq"]
[ext_resource type="PackedScene" uid="uid://cc387rvcfabf0" path="res://Scenes/explosion.tscn" id="3_78f74"]
[ext_resource type="Texture2D" uid="uid://dxlnmgmk2ltps" path="res://Sprites/boss2/boss2atk.png" id="4_b5h4d"]
[ext_resource type="Texture2D" uid="uid://bvcebqw8x34qo" path="res://Sprites/boss2/boss2idle.png" id="4_tvscf"]
[ext_resource type="Texture2D" uid="uid://6fe5kg56jal0" path="res://Sprites/boss2/boss2dash.png" id="5_78f74"]
[ext_resource type="Texture2D" uid="uid://bki87ccpb8fx0" path="res://Sprites/boss2/boss2jump.png" id="7_78f74"]
[ext_resource type="Texture2D" uid="uid://54t72kf66vj1" path="res://Sprites/boss2/boss2walk.png" id="7_x72gp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5h4d"]
size = Vector2(15.76, 27.705)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5qqr"]
atlas = ExtResource("4_b5h4d")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03s48"]
atlas = ExtResource("4_b5h4d")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26wkh"]
atlas = ExtResource("4_b5h4d")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti373"]
atlas = ExtResource("4_b5h4d")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtv7j"]
atlas = ExtResource("4_b5h4d")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bo2p"]
atlas = ExtResource("4_b5h4d")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq2ot"]
atlas = ExtResource("4_b5h4d")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqxb7"]
atlas = ExtResource("5_78f74")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fdv"]
atlas = ExtResource("5_78f74")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tcf2"]
atlas = ExtResource("5_78f74")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc3tj"]
atlas = ExtResource("5_78f74")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjcoq"]
atlas = ExtResource("4_tvscf")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfml4"]
atlas = ExtResource("4_tvscf")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5h4d"]
atlas = ExtResource("4_tvscf")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78f74"]
atlas = ExtResource("4_tvscf")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x72gp"]
atlas = ExtResource("4_tvscf")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7cr1"]
atlas = ExtResource("4_tvscf")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynb5r"]
atlas = ExtResource("7_78f74")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipoib"]
atlas = ExtResource("7_78f74")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_di34m"]
atlas = ExtResource("7_78f74")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y7yu"]
atlas = ExtResource("7_78f74")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsibk"]
atlas = ExtResource("7_78f74")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt3hf"]
atlas = ExtResource("7_x72gp")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5jvt"]
atlas = ExtResource("7_x72gp")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2omqs"]
atlas = ExtResource("7_x72gp")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkxp4"]
atlas = ExtResource("7_x72gp")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fane"]
atlas = ExtResource("7_x72gp")
region = Rect2(512, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5qqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5qqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03s48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26wkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti373")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtv7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bo2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq2ot")
}],
"loop": false,
"name": &"atk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqxb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tcf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc3tj")
}],
"loop": false,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjcoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfml4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78f74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x72gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7cr1")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynb5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipoib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di34m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y7yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsibk")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt3hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5jvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2omqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkxp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fane")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_03s48"]
radius = 26.019224

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78f74"]
size = Vector2(99, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyxhu"]
size = Vector2(22.93, 32.04)

[node name="Boss 2" type="CharacterBody2D" node_paths=PackedStringArray("sprites")]
collision_layer = 4
script = ExtResource("1_tvscf")
bullet = ExtResource("2_pjcoq")
health = 120
sprites = [NodePath("AnimatedSprite2D")]
explosion = ExtResource("3_78f74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 7)
shape = SubResource("RectangleShape2D_b5h4d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, 5)
sprite_frames = SubResource("SpriteFrames_q5qqr")
animation = &"jump"

[node name="atkSensor" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(-18, -6)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/atkSensor"]
position = Vector2(41, 5)
shape = SubResource("CircleShape2D_03s48")

[node name="dashSensor" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(56, -3)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/dashSensor"]
position = Vector2(48.5, 4)
shape = SubResource("RectangleShape2D_78f74")

[node name="atkArea" type="Area2D" parent="."]
position = Vector2(-1, -9)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="atkArea"]
position = Vector2(-1, 15)
shape = SubResource("RectangleShape2D_fyxhu")

[connection signal="body_entered" from="atkArea" to="." method="_on_atk_area_body_entered"]
